tests/errors/import_cycle.orus
use tests::modules::cycles::cycle_a

fn main() {
}
